--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
-  "homepage": "./projects/dalle-2-dashboard",
+  "homepage": "https://johannesmerwe.com/projects/dalle-2-dashboard/",
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.1",
+    "http-server": "^14.1.1",
     "openai": "^3.1.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
